--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,13 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "Michigan State University-US"
+title                    : "Postdoc"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Peipei Wang"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+url                      : https://peipeiwang6.github.io/ 
+repository               : "peipeiwang6/peipeiwang6.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
