--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/peipeiwang6"
+  github           : "peipeiwang6"
   google_plus      :
   keybase          :
   instagram        :
