--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  name        : "Peipei Wang"
+  uri         : "https://peipeiwang6.github.io/"
+  email       : "peipeiwang6@gmail.com"
+  bio         : "Peipei"
+  avatar      : "51x51mm.jpg"
+  twitter     : ""
+  google_plus : ""
 
 Name2 Name2:
   name        : "Name2 Name2"
