--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research project"
+    url: /Research project/
+    
+  - title: "Education"
+    url: /Education/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Scientific service"
+    url: /Scientific service/
