--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,14 +5,7 @@ Name Name:
   uri         : "https://peipeiwang6.github.io/"
   email       : "peipeiwang6@gmail.com"
   bio         : "Peipei"
-  avatar      : "51x51mm.jpg"
+  avatar      : "51x51mm.png"
   twitter     : ""
   google_plus : ""
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
