--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Peipei Wang"
 description              : &description "personal description"
 url                      : https://peipeiwang6.github.io/ 
 repository               : "peipeiwang6/peipeiwang6.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : "51x51mm.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Peipei Wang"
-  avatar           : "profile.png"
+  avatar           : "51x51mm.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Michigan State University"
   employer         :
