--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Research project"
     url: /Research project/
 
-  - title: "Publications"
-    url: /publications/
+  - title: "Publication"
+    url: /publication/
 
   - title: "Award"
     url: /award/
