Chenge CV and eductions

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Peipei Wang"
   avatar           : "51x51mm.png"
   bio              : 
-  location         : "Kunpeng Institute of Modern Agriculture at Foshan/Agricultural Genomics Institute at Shenzhen-China"
+  location         : "Foshan, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=opTg_oYAAAAJ&hl=en"
