--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=opTg_oYAAAAJ&hl=en"
-  email            : "peipeiwang6@gmail.com, peipeiw@msu.edu"
+  email            : "wangpeipei02@caas.cn; peipeiw6@163.com"
   researchgate     : "https://www.researchgate.net/profile/Peipei-Wang-7"
   uri              :
   bitbucket        :
